@@ -66,7 +66,7 @@ public class WebTest {
                      + "/myurl?username=scott&password=tiger";
         System.out.println("opening connection to " + url);
         HttpURLConnection conn = (HttpURLConnection)
-            (new URL(url)).openConnection();
+            URI.create(url).toURL().openConnection();
         System.out.println("TESTNAME " + TEST_NAME);
 
         int code = conn.getResponseCode();
