@@ -61,7 +61,7 @@ public class WebTest {
 
         String url = "http://" + host + ":" + port + contextRoot + "/myurl";
         System.out.println("opening connection to " + url);
-        HttpURLConnection conn = (HttpURLConnection) (new URL(url)).openConnection();
+        HttpURLConnection conn = (HttpURLConnection) URI.create(url).toURL().openConnection();
         int code = conn.getResponseCode();
         if (code != 200) {
             System.out.println("Unexpected return code: " + code);
