@@ -78,7 +78,7 @@ public class WebTest {
         String url = "http://" + host + ":" + port + contextRoot + "/myurl"
                 + "?testcase=" + testCase + "&whichemf=" + whichEMF;
         System.out.println("opening connection to " + url);
-        HttpURLConnection conn = (HttpURLConnection) (new URL(url))
+        HttpURLConnection conn = (HttpURLConnection) URI.create(url).toURL()
                 .openConnection();
 
         int code = conn.getResponseCode();
