@@ -68,7 +68,7 @@ public class WebTest {
 
         String url = "http://" + host + ":" + port + contextRoot + "/myurl";
         System.out.println("opening connection to " + url);
-        HttpURLConnection conn = (HttpURLConnection) (new URL(url))
+        HttpURLConnection conn = (HttpURLConnection) URI.create(url).toURL()
                 .openConnection();
 
         int code = conn.getResponseCode();
